# ProjectCreator

./: README.md  newproject.sh
Templates/cpp/: .gitignore  CMakeLists.txt  _ProjectCreatorRC.sh
Templates/cpp_cmake_gl/: CMakeLists.txt  _ProjectCreatorRC.sh
Templates/cpp_cmake_gl/cmake/Modules/: FindGLEW.cmake  FindGLFW.cmake  FindSFML.cmake  FindV8.cmake
Templates/empty/: .gitignore
Templates/go/: .gitignore  _ProjectCreatorRC.sh
